Fix for java < 21 and minor text change